hw5/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw5-service
  namespace: apps
spec:
  selector:
    app: hw5
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
